Another localization attempt.

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -1,6 +1,7 @@
 {
+    "test": "Eng",
     "lower_bar": {
-        "usage_label": "Usage",
+        "usage_label": "Usage________",
         "queue_label": "Queue",
         "about_label": "About"
     },
