--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -1,24 +1,29 @@
 {
-    "test": "Eng",
     "lower_bar": {
-        "usage_label": "Usage________",
-        "queue_label": "Queue",
-        "about_label": "About"
+        "usage": "Usage",
+        "queue": "Queue",
+        "about": "About"
     },
     "usage": {
-        "quote": "First is first.\nLast is last.",
+        "quote": "First one will always be first",
         "quote_author": "Probably an ancient proverb",
         "description": "Increase your productivity by organizing your tasks in the most natural way - by queueing them. Stop procrastinating and let the app engage you to do tasks without the possibility to change their order."
     },
     "queue": {
-        "add_task": "Queue a task",
-        "remove_task": "Finish the first task",
-        "task": {
-            "title_placeholder": "Title",
-            "description_placeholder": "Description",
-            "created_label": "Created",
-            "last_modified_label": "Last modified"
-        }
+        "push_task": "Queue a task",
+        "pop_task": "Finish the first task",
+        "push_question": "Something new?",
+        "pop_question": "Already done?",
+        "confirmation": "Yes",
+        "cancelation": "No"
+    },
+    "task": {
+        "title": "Title",
+        "description": "Description",
+        "created": "Created",
+        "last_modified": "Last modified",
+        "title_limit_info": "Title length limit is",
+        "description_limit_info": "Description length limit is"
     },
     "about": {
         "motto": "Manage your everyday tasks the right way.",
@@ -29,6 +34,7 @@
         "terms_of_use_title": "Terms of Use",
         "terms_of_use_subtitle": "Described in the license.",
         "privacy_policy_title": "Privacy Policy",
-        "privacy_policy_subtitle": "No data is collected."
+        "privacy_policy_subtitle": "No data is collected.",
+        "browser_error": "Unable to open a browser."
     }
 }
