Mostly translation improvements.

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -5,7 +5,7 @@
         "about": "About"
     },
     "usage": {
-        "quote": "First one will always be first",
+        "quote": "First one\nwill be always first",
         "quote_author": "Probably an ancient proverb",
         "description": "Increase your productivity by organizing your tasks in the most natural way - by queueing them. Stop procrastinating and let the app engage you to do tasks without the possibility to change their order."
     },
