Improve 'Usage' tab.

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -7,7 +7,8 @@
     "usage": {
         "quote": "First one\nwill be always first",
         "quote_author": "Probably an ancient proverb",
-        "description": "Increase your productivity by organizing your tasks in the most natural way - by queueing them. Stop procrastinating and let the app engage you to do tasks without the possibility to change their order."
+        "description": "Increase your productivity by organizing your tasks in the most natural way - by queueing them. Stop procrastinating and let the app engage you to do tasks without the possibility to change their order.",
+        "manual": "Just press 'Push a task' button an basically create an empty task. Fill a title and expand it to provide more data in a description field. Already finished the task? Just click the 'Pop the first task' button above the queue and remove the first task."
     },
     "queue": {
         "push_task": "Queue a task",
