--- a/assets/lang/pl.json
+++ b/assets/lang/pl.json
@@ -36,6 +36,6 @@
         "terms_of_use_subtitle": "Zdefiniowane w licencji.",
         "privacy_policy_title": "Polityka prywatności",
         "privacy_policy_subtitle": "Aplikacja nie zbiera jakichkolwiek danych.",
-        "browser_error": "Wystąpił błąd podczas uruchamiania przeglądarki."
+        "browser_error": "Wystąpił błąd podczas uruchamiania przeglądarki internetowej."
     }
 }
